--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div class="media-body">
               <h5 class="mt-0">Események</h5>
               <p>Itt találod a legjobb jó bulit, böngéssz bátran és keress vagy adj el jegyeket a barátaidnak, vagy más felhasználóknak.</p>
-              <p><a class="btn btn-primary" href="events.html" role="button">Események &raquo;</a></p>              
+              <p><a class="btn btn-primary" href="events.html" role="button"><i class="fa fa-calendar" aria-hidden="true"></i> Események</a></p>              
             </div>
           </div>
         <!-- Tickets Object -->
@@ -74,7 +74,7 @@
             <div class="media-body">
               <h5 class="mt-0">Jegyek</h5>
               <p>Ha siets, egyből keztheted a jegyek böngészésével is. Itt is tudsz keresni az esémnyek neve vagy időpontja alapján.</p>
-              <p><a class="btn btn-primary" href="tickets.html" role="button">Események &raquo;</a></p>              
+              <p><a class="btn btn-primary" href="tickets.html" role="button"><i class="fa fa-ticket" aria-hidden="true"></i> Jegyek</a></p>              
             </div>
           </div>
         <!-- Registration Object -->
@@ -83,7 +83,7 @@
             <div class="media-body">
               <h5 class="mt-0">Regisztráció</h5>
               <p>Még nem regisztrálták? Akkor gyorsan tedd meg, mert a szolgáltatás csak tagoknak elérhető. Sőt! Az újak értékes ajándékot kapnak tőlük.</p>
-              <p><a class="btn btn-primary" href="register.html" role="button">Események &raquo;</a></p>              
+              <p><a class="btn btn-primary" href="register.html" role="button"><i class="fa fa-user-plus" aria-hidden="true"></i> Regisztráció</a></p>              
             </div>
           </div>
       </div>
