--- a/events.html
+++ b/events.html
@@ -51,28 +51,53 @@
 
       <!-- Jumbotron -->
       <div class="jumbotron">
-        <h1>Marketing stuff!</h1>
-        <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet.</p>
+        <h1>Események</h1>
+        <p class="lead">Itt találod a közelgő eseményeket. Ha érdekel egy, akkor innen azonnal tovább tudsz ugrani a jegyvásárlásra.</p>
         <p><a class="btn btn-lg btn-success" href="#" role="button">Get started today</a></p>
       </div>
 
-      <!-- Example row of columns -->
+      <!-- Table -->
       <div class="row">
-        <div class="col-lg-4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>
-        </div>
-        <div class="col-lg-4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>
-        </div>
-        <div class="col-lg-4">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa.</p>
-          <p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>
-        </div>
+          <table class="table table-striped">
+              <thead>
+                <tr>
+                  <th>#</th>
+                  <th>Esemény</th>
+                  <th>Időpont</th>
+                  <th>Helyszín</th>
+                  <th></th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th scope="row">1</th>
+                  <td>Sziget Fesztivál</td>
+                  <td>2018-08-03</td>
+                  <td>Hajógyári sziget</td>
+                  <td>
+                    <a href="#" class="btn btn-primary btn-sm">tovább <i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+                  </td>
+                </tr>
+                <tr>
+                  <th scope="row">2</th>
+                  <td>Balaton Sound</td>
+                  <td>2018-09-03</td>
+                  <td>Zamárdi</td>
+                  <td>
+                    <a href="#" class="btn btn-primary btn-sm">tovább <i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+                  </td>
+                </tr>
+                <tr>
+                  <th scope="row">3</th>
+                  <td>Efott</td>
+                  <td>2018-10-03</td>
+                  <td>Agárd</td>
+                  <td>
+                    <a href="#" class="btn btn-primary btn-sm" >tovább <i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
       </div>
 
       <!-- Site footer -->
@@ -86,7 +111,7 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="lib/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="lib/jquery-3.2.1.slim.min.js"></script>
     <script src="lib/popper.min.js"></script>
     <script src="lib/bootstrap/js/bootstrap.min.js"></script>
   </body>
