registration page update

--- a/login.html
+++ b/login.html
@@ -62,7 +62,7 @@
           <div class="card border-secondary">
             <div class="card-header">Bejelentkezés</div>
             <div class="card-body">
-              <form>
+              <form id="loginForm" novalidate>
                   <div class="form-group">
                     <label for="loginEmail">Email</label>
                     <input name="loginEmail" type="email" class="form-control" id="loginEmail" placeholder="Enter email">
