events page finally version

--- a/register.html
+++ b/register.html
@@ -127,13 +127,14 @@
         </div>
       </div> <!-- /Login -->
 
-
-      <!-- Site footer -->
-      <footer class="footer">
-        <p>&copy; Company 2017</p>
-      </footer>
-
     </div> <!-- /container -->
+
+    <!-- Site footer -->
+    <div class="container footer-container">
+      <footer class="footer">
+          <p>&copy; Company 2017</p>
+      </footer>
+    </div> <!-- /Site footer -->
 
 
     <!-- Bootstrap core JavaScript
