--- a/events.html
+++ b/events.html
@@ -53,10 +53,22 @@
       <div class="jumbotron">
         <h1>Események</h1>
         <p class="lead">Itt találod a közelgő eseményeket. Ha érdekel egy, akkor innen azonnal tovább tudsz ugrani a jegyvásárlásra.</p>
-        <p><a class="btn btn-lg btn-success" href="#" role="button">Get started today</a></p>
+        <p></p>
       </div>
 
-      <!-- Table -->
+      <!-- Search -->
+    <div class="row events-search-row">
+      <div class="col-lg-12">
+          <div class="input-group">
+            <input type="text" class="form-control" placeholder="Keresés..." aria-label="Keresés...">
+            <span class="input-group-btn">
+              <button class="btn btn-secondary" type="button"><i class="fa fa-search" aria-hidden="true"></i></button>
+            </span>
+          </div>
+        </div>
+      </div><!-- /Search -->
+
+      <!-- Table
       <div class="row">
           <table class="table table-striped">
               <thead>
@@ -98,14 +110,43 @@
                 </tr>
               </tbody>
             </table>
+      </div>  /table -->
+
+      <div class="card-deck events-card-deck">
+        <a href="tickets.html?event=1" class="card">
+          <img class="card-img-top" src="img/sziget_logo.png" alt="sziget logo">
+          <div class="card-body">
+            <h4 class="card-title">Sziget Fesztivál</h4>
+            <p class="card-text">Látogass el a 25 éves Szigetre és bulizz a legjobb arcokkal.</p>
+            <p class="card-text"><small class="text-muted">2017-08-03</small></p>
+          </div>
+        </a>
+        <a href="tickets.html?event=2" class="card">
+          <img class="card-img-top" src="img/sound_logo.jpg" alt="sound logo">
+          <div class="card-body">
+            <h4 class="card-title">Balaton Sound</h4>
+            <p class="card-text">Látogass el Zamárdiba a Soundra és bulizz a legjobb arcokkal.</p>
+            <p class="card-text"><small class="text-muted">2017-09-03</small></p>
+          </div>
+        </a>
+        <a href="tickets.html?event=3" class="card">
+          <img class="card-img-top" src="img/efott_logo.jpg" alt="efott logo">
+          <div class="card-body">
+            <h4 class="card-title">Efott Fesztivál</h4>
+            <p class="card-text">Látogass el Agárdra az Efottra és bulizz a legjobb arcokkal.</p>
+            <p class="card-text"><small class="text-muted">2017-10-03</small></p>
+          </div>
+        </a>
       </div>
 
-      <!-- Site footer -->
-      <footer class="footer">
-        <p>&copy; Company 2017</p>
-      </footer>
-
     </div> <!-- /container -->
+
+    <!-- Site footer -->
+    <div class="container footer-container">
+        <footer class="footer">
+            <p>&copy; Company 2017</p>
+        </footer>
+    </div> <!-- /Site footer -->
 
 
     <!-- Bootstrap core JavaScript
