--- a/index.html
+++ b/index.html
@@ -88,12 +88,14 @@
           </div>
       </div>
 
-      <!-- Site footer -->
-      <footer class="footer">
-        <p>&copy; Company 2017</p>
-      </footer>
-
     </div> <!-- /container -->
+
+    <!-- Site footer -->
+    <div class="container footer-container">
+      <footer class="footer">
+          <p>&copy; Company 2017</p>
+      </footer>
+    </div> <!-- /Site footer -->
 
 
     <!-- Bootstrap core JavaScript
