--- a/tickets.html
+++ b/tickets.html
@@ -74,14 +74,14 @@
           <p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>
         </div>
       </div>
-
-      <!-- Site footer -->
-      <footer class="footer">
-        <p>&copy; Company 2017</p>
-      </footer>
-
     </div> <!-- /container -->
 
+    <!-- Site footer -->
+    <div class="container footer-container">
+        <footer class="footer">
+            <p>&copy; Company 2017</p>
+        </footer>
+    </div> <!-- /Site footer -->
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
