--- a/tickets.html
+++ b/tickets.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../../../favicon.ico">
 
-    <title>Justified Nav Template for Bootstrap</title>
+    <title>JegyBazár</title>
 
     <!-- Bootstrap core CSS -->
     <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -50,9 +50,20 @@
       </div>
 
       <h1>Licitálható jegyek listája</h1>
+      <div class="row tickets-search-row">
+          <div class="col-lg-12">
+              <div class="input-group">
+                <input type="text" class="form-control" placeholder="Keresés..." aria-label="Keresés...">
+                <span class="input-group-btn">
+                  <button class="btn btn-secondary" type="button"><i class="fa fa-search" aria-hidden="true"></i></button>
+                </span>
+              </div>
+            </div>
+      </div><!-- /tickets-search-row -->
       <table class="table table-striped">
         <thead class="thead-inverse">
           <tr>
+            <th>#</th>
             <th style="min-width:30%">Esemény neve</th>
             <th>Időpont</th>
             <th class="d-none d-md-table-cell">Eladó neve</th>
@@ -60,58 +71,7 @@
             <th style="width:18%">Licitek megtekintése</th>
           </tr>
         </thead>
-        <tbody>
-          <tr>
-            <td data-toggle="tooltip" data-html="true" data-placement="bottom" 
-            title="<strong>Még 3 napig lehet licitálni</strong> <br/>az esemény megtekintéséhez kattints ide"><a href="events.html?id=1">Sziget fesztivál</a></td>
-            <td>2018.08.03. 13:00</td>
-            <td class="d-none d-md-table-cell">Példa Jóska</td>
-            <td class="text-right d-none d-md-table-cell">3 db</td>
-            <td>
-              <a href="bid.html?id=1">tovább a licethez</a>
-            </td>
-          </tr>
-          <tr>
-            <td data-toggle="tooltip" data-html="true" data-placement="bottom" 
-            title="<strong>Még 3 napig lehet licitálni</strong> <br/>az esemény megtekintéséhez kattints ide"><a href="events.html?id=1">Sziget fesztivál</a></td>
-            <td>2018.08.03. 13:00</td>
-            <td class="d-none d-md-table-cell">Példa Jóska</td>
-            <td class="text-right d-none d-md-table-cell">3 db</td>
-            <td>
-              <a href="bid.html?id=1">tovább a licethez</a>
-            </td>
-          </tr>
-          <tr>
-            <td data-toggle="tooltip" data-html="true" data-placement="bottom" 
-            title="<strong>Még 3 napig lehet licitálni</strong> <br/>az esemény megtekintéséhez kattints ide"><a href="events.html?id=1">Sziget fesztivál</a></td>
-            <td>2018.08.03. 13:00</td>
-            <td class="d-none d-md-table-cell">Példa Jóska</td>
-            <td class="text-right d-none d-md-table-cell">3 db</td>
-            <td>
-              <a href="bid.html?id=1">tovább a licethez</a>
-            </td>
-          </tr>
-          <tr>
-            <td data-toggle="tooltip" data-html="true" data-placement="bottom" 
-            title="<strong>Még 3 napig lehet licitálni</strong> <br/>az esemény megtekintéséhez kattints ide"><a href="events.html?id=1">Sziget fesztivál</a></td>
-            <td>2018.08.03. 13:00</td>
-            <td class="d-none d-md-table-cell">Példa Jóska</td>
-            <td class="text-right d-none d-md-table-cell">3 db</td>
-            <td>
-              <a href="bid.html?id=1">tovább a licethez</a>
-            </td>
-          </tr>
-          <tr>
-            <td data-toggle="tooltip" data-html="true" data-placement="bottom" 
-            title="<strong>Még 3 napig lehet licitálni</strong> <br/>az esemény megtekintéséhez kattints ide"><a href="events.html?id=1">Sziget fesztivál</a></td>
-            <td>2018.08.03. 13:00</td>
-            <td class="d-none d-md-table-cell">Példa Jóska</td>
-            <td class="text-right d-none d-md-table-cell">3 db</td>
-            <td>
-              <a href="bid.html?id=1">tovább a licethez</a>
-            </td>
-          </tr>
-        </tbody>
+        <tbody></tbody>
       </table>
 
     </div> <!-- /container -->
@@ -122,6 +82,24 @@
             <p>&copy; Company 2017</p>
         </footer>
     </div> <!-- /Site footer -->
+
+
+    <div class="templates" style="display: none;">
+    <table>
+      <tr class="ticket-row">
+        <td></td> 
+        <td data-toggle="tooltip" data-html="true" data-placement="bottom" 
+        title="<strong>Még 3 napig lehet licitálni</strong> <br/>az esemény megtekintéséhez kattints ide"><a href="events.html?id=1">Sziget fesztivál</a></td>
+        <td>2018.08.03. 13:00</td>
+        <td class="d-none d-md-table-cell">Példa Jóska</td>
+        <td class="text-right d-none d-md-table-cell">3 db</td>
+        <td>
+          <a href="bid.html?id=1">tovább a licethez</a>
+        </td>
+      </tr>
+    </table>
+    </div>
+
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
